--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -110,6 +110,13 @@ stars.bim : stars.obj a_nask.obj Makefile
 stars.hrb : stars.bim Makefile
 	$(BIM2HRB) stars.bim stars.hrb 47k
 
+stars2.bim : stars2.obj a_nask.obj Makefile
+	$(OBJ2BIM) @$(RULEFILE) out:stars2.bim stack:1k map:stars.map \
+		stars2.obj a_nask.obj
+
+stars2.hrb : stars2.bim Makefile
+	$(BIM2HRB) stars2.bim stars2.hrb 47k
+
 bug1.bim : bug1.obj a_nask.obj Makefile
 	$(OBJ2BIM) @$(RULEFILE) out:bug1.bim map:bug1.map bug1.obj a_nask.obj
 
@@ -132,7 +139,7 @@ bug3.hrb : bug3.bim Makefile
 haribote.img : ipl10.bin haribote.sys Makefile \
 		hello.hrb hello2.hrb a.hrb hello3.hrb hello4.hrb hello5.hrb \
 			winhelo.hrb winhelo2.hrb winhelo3.hrb \
-			star1.hrb stars.hrb \
+			star1.hrb stars.hrb stars2.hrb \
 			 bug1.hrb bug2.hrb bug3.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:ipl10.bin len:512 from:0 to:0 \
@@ -150,6 +157,7 @@ haribote.img : ipl10.bin haribote.sys Makefile \
 		copy from:winhelo3.hrb to:@: \
 		copy from:star1.hrb to:@: \
 		copy from:stars.hrb to:@: \
+		copy from:stars2.hrb to:@: \
 		copy from:bug1.hrb to:@: \
 		copy from:bug2.hrb to:@: \
 		copy from:bug3.hrb to:@: \
