--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -117,30 +117,18 @@ stars2.bim : stars2.obj a_nask.obj Makefile
 stars2.hrb : stars2.bim Makefile
 	$(BIM2HRB) stars2.bim stars2.hrb 47k
 
-bug1.bim : bug1.obj a_nask.obj Makefile
-	$(OBJ2BIM) @$(RULEFILE) out:bug1.bim map:bug1.map bug1.obj a_nask.obj
+lines.bim : lines.obj a_nask.obj Makefile
+	$(OBJ2BIM) @$(RULEFILE) out:lines.bim stack:1k map:lines.map \
+		lines.obj a_nask.obj
 
-
-bug1.hrb : bug1.bim Makefile
-	$(BIM2HRB) bug1.bim bug1.hrb 0
-
-bug2.bim : bug2.obj a_nask.obj Makefile
-	$(OBJ2BIM) @$(RULEFILE) out:bug2.bim map:bug2.map bug2.obj a_nask.obj
-
-bug2.hrb : bug2.bim Makefile
-	$(BIM2HRB) bug2.bim bug2.hrb 0
-
-bug3.bim : bug3.obj a_nask.obj Makefile
-	$(OBJ2BIM) @$(RULEFILE) out:bug3.bim map:bug3.map bug3.obj a_nask.obj
-
-bug3.hrb : bug3.bim Makefile
-	$(BIM2HRB) bug3.bim bug3.hrb 0
+lines.hrb : lines.bim Makefile
+	$(BIM2HRB) lines.bim lines.hrb 47k
 
 haribote.img : ipl10.bin haribote.sys Makefile \
 		hello.hrb hello2.hrb a.hrb hello3.hrb hello4.hrb hello5.hrb \
 			winhelo.hrb winhelo2.hrb winhelo3.hrb \
 			star1.hrb stars.hrb stars2.hrb \
-			 bug1.hrb bug2.hrb bug3.hrb
+			lines.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote.sys to:@: \
@@ -158,9 +146,7 @@ haribote.img : ipl10.bin haribote.sys Makefile \
 		copy from:star1.hrb to:@: \
 		copy from:stars.hrb to:@: \
 		copy from:stars2.hrb to:@: \
-		copy from:bug1.hrb to:@: \
-		copy from:bug2.hrb to:@: \
-		copy from:bug3.hrb to:@: \
+		copy from:lines.hrb to:@: \
 		imgout:haribote.img
 
 # ˆê”Ê‹K‘¥
