--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -145,11 +145,18 @@ beep.bim : beep.obj a_nask.obj Makefile
 beep.hrb : beep.bim Makefile
 	$(BIM2HRB) beep.bim beep.hrb 48k
 
+color.bim : color.obj a_nask.obj Makefile
+	$(OBJ2BIM) @$(RULEFILE) out:color.bim stack:1k map:color.map \
+		color.obj a_nask.obj
+
+color.hrb : color.bim Makefile
+	$(BIM2HRB) color.bim color.hrb 56k
+
 haribote.img : ipl10.bin haribote.sys Makefile \
 		hello.hrb hello2.hrb a.hrb hello3.hrb hello4.hrb hello5.hrb \
 			winhelo.hrb winhelo2.hrb winhelo3.hrb \
 			star1.hrb stars.hrb stars2.hrb \
-			lines.hrb walk.hrb noodle.hrb beep.hrb
+			lines.hrb walk.hrb noodle.hrb beep.hrb color.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote.sys to:@: \
@@ -171,6 +178,7 @@ haribote.img : ipl10.bin haribote.sys Makefile \
 		copy from:walk.hrb to:@: \
 		copy from:noodle.hrb to:@: \
 		copy from:beep.hrb to:@: \
+		copy from:color.hrb to:@: \
 		imgout:haribote.img
 
 # ˆê”Ê‹K‘¥
