--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -21,7 +21,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		lines/lines.hrb walk/walk.hrb \
 		noodle/noodle.hrb beepdown/beepdown.hrb \
 		color/color.hrb color2/color2.hrb \
-		sosu/sosu.hrb sosu3/sosu3.hrb
+		sosu/sosu.hrb sosu2/sosu2.hrb sosu3/sosu3.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:haribote/ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote/haribote.sys to:@: \
@@ -44,6 +44,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		copy from:color/color.hrb to:@: \
 		copy from:color2/color2.hrb to:@: \
 		copy from:sosu/sosu.hrb to:@: \
+		copy from:sosu2/sosu2.hrb to:@: \
 		copy from:sosu3/sosu3.hrb to:@: \
 		imgout:haribote.img
 
@@ -88,6 +89,9 @@ full :
 	$(MAKE) -C beepdown
 	$(MAKE) -C color
 	$(MAKE) -C color2
+	$(MAKE) -C sosu
+	$(MAKE) -C sosu2
+	$(MAKE) -C sosu3
 	$(MAKE) haribote.img
 
 run_full :
@@ -129,6 +133,9 @@ clean_full :
 	$(MAKE) -C beepdown		clean
 	$(MAKE) -C color		clean
 	$(MAKE) -C color2		clean
+	$(MAKE) -C sosu			clean
+	$(MAKE) -C sosu2		clean
+	$(MAKE) -C sosu3		clean
 
 src_only_full :
 	$(MAKE) -C haribote		src_only
@@ -149,6 +156,9 @@ src_only_full :
 	$(MAKE) -C beepdown		src_only
 	$(MAKE) -C color		src_only
 	$(MAKE) -C color2		src_only
+	$(MAKE) -C sosu			src_only
+	$(MAKE) -C sosu2		src_only
+	$(MAKE) -C sosu3		src_only
 	-$(DEL) haribote.img
 
 refresh :
