--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -21,7 +21,8 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		lines/lines.hrb walk/walk.hrb \
 		noodle/noodle.hrb beepdown/beepdown.hrb \
 		color/color.hrb color2/color2.hrb \
-		sosu/sosu.hrb sosu2/sosu2.hrb sosu3/sosu3.hrb
+		sosu/sosu.hrb sosu2/sosu2.hrb sosu3/sosu3.hrb \
+		typeipl/typeipl.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:haribote/ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote/haribote.sys to:@: \
@@ -46,6 +47,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		copy from:sosu/sosu.hrb to:@: \
 		copy from:sosu2/sosu2.hrb to:@: \
 		copy from:sosu3/sosu3.hrb to:@: \
+		copy from:typeipl/typeipl.hrb to:@: \
 		imgout:haribote.img
 
 # ˆê”Ê‹K‘¥
@@ -92,6 +94,7 @@ full :
 	$(MAKE) -C sosu
 	$(MAKE) -C sosu2
 	$(MAKE) -C sosu3
+	$(MAKE) -C typeipl
 	$(MAKE) haribote.img
 
 run_full :
@@ -136,6 +139,7 @@ clean_full :
 	$(MAKE) -C sosu			clean
 	$(MAKE) -C sosu2		clean
 	$(MAKE) -C sosu3		clean
+	$(MAKE) -C typeipl		clean
 
 src_only_full :
 	$(MAKE) -C haribote		src_only
@@ -159,6 +163,7 @@ src_only_full :
 	$(MAKE) -C sosu			src_only
 	$(MAKE) -C sosu2		src_only
 	$(MAKE) -C sosu3		src_only
+	$(MAKE) -C typeipl		src_only
 	-$(DEL) haribote.img
 
 refresh :
