--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -22,7 +22,8 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		noodle/noodle.hrb beepdown/beepdown.hrb \
 		color/color.hrb color2/color2.hrb \
 		sosu/sosu.hrb sosu2/sosu2.hrb sosu3/sosu3.hrb \
-		typeipl/typeipl.hrb type/type.hrb iroha/iroha.hrb
+		typeipl/typeipl.hrb type/type.hrb iroha/iroha.hrb \
+		chklang/chklang.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:haribote/ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote/haribote.sys to:@: \
@@ -50,6 +51,8 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		copy from:typeipl/typeipl.hrb to:@: \
 		copy from:type/type.hrb to:@: \
 		copy from:iroha/iroha.hrb to:@: \
+		copy from:euc.txt to:@: \
+		copy from:chklang/chklang.hrb to:@: \
 		copy from:nihongo/nihongo.fnt to:@: \
 		imgout:haribote.img
 
@@ -100,6 +103,7 @@ full :
 	$(MAKE) -C typeipl
 	$(MAKE) -C type
 	$(MAKE) -C iroha
+	$(MAKE) -C chklang
 	$(MAKE) haribote.img
 
 run_full :
@@ -147,6 +151,8 @@ clean_full :
 	$(MAKE) -C typeipl		clean
 	$(MAKE) -C type			clean
 	$(MAKE) -C iroha		clean
+	$(MAKE) -C chklang		clean
+
 
 src_only_full :
 	$(MAKE) -C haribote		src_only
@@ -173,6 +179,7 @@ src_only_full :
 	$(MAKE) -C typeipl		src_only
 	$(MAKE) -C type			src_only
 	$(MAKE) -C iroha		src_only
+	$(MAKE) -C chklang		src_only
 	-$(DEL) haribote.img
 
 refresh :
