--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -22,8 +22,8 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		noodle/noodle.hrb beepdown/beepdown.hrb \
 		color/color.hrb color2/color2.hrb \
 		sosu/sosu.hrb sosu2/sosu2.hrb sosu3/sosu3.hrb \
-		typeipl/typeipl.hrb type/type.hrb iroha/iroha.hrb \
-		chklang/chklang.hrb
+		type/type.hrb iroha/iroha.hrb \
+		chklang/chklang.hrb notrec/notrec.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:haribote/ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote/haribote.sys to:@: \
@@ -48,11 +48,11 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		copy from:sosu/sosu.hrb to:@: \
 		copy from:sosu2/sosu2.hrb to:@: \
 		copy from:sosu3/sosu3.hrb to:@: \
-		copy from:typeipl/typeipl.hrb to:@: \
 		copy from:type/type.hrb to:@: \
 		copy from:iroha/iroha.hrb to:@: \
 		copy from:euc.txt to:@: \
 		copy from:chklang/chklang.hrb to:@: \
+		copy from:notrec/notrec.hrb to:@: \
 		copy from:nihongo/nihongo.fnt to:@: \
 		imgout:haribote.img
 
@@ -100,10 +100,10 @@ full :
 	$(MAKE) -C sosu
 	$(MAKE) -C sosu2
 	$(MAKE) -C sosu3
-	$(MAKE) -C typeipl
 	$(MAKE) -C type
 	$(MAKE) -C iroha
 	$(MAKE) -C chklang
+	$(MAKE) -C notrec
 	$(MAKE) haribote.img
 
 run_full :
@@ -148,11 +148,10 @@ clean_full :
 	$(MAKE) -C sosu			clean
 	$(MAKE) -C sosu2		clean
 	$(MAKE) -C sosu3		clean
-	$(MAKE) -C typeipl		clean
 	$(MAKE) -C type			clean
 	$(MAKE) -C iroha		clean
 	$(MAKE) -C chklang		clean
-
+	$(MAKE) -C notrec		clean
 
 src_only_full :
 	$(MAKE) -C haribote		src_only
@@ -176,10 +175,10 @@ src_only_full :
 	$(MAKE) -C sosu			src_only
 	$(MAKE) -C sosu2		src_only
 	$(MAKE) -C sosu3		src_only
-	$(MAKE) -C typeipl		src_only
 	$(MAKE) -C type			src_only
 	$(MAKE) -C iroha		src_only
 	$(MAKE) -C chklang		src_only
+	$(MAKE) -C notrec		src_only
 	-$(DEL) haribote.img
 
 refresh :
