--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -23,7 +23,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		color/color.hrb color2/color2.hrb \
 		sosu/sosu.hrb sosu2/sosu2.hrb sosu3/sosu3.hrb \
 		type/type.hrb iroha/iroha.hrb \
-		chklang/chklang.hrb notrec/notrec.hrb
+		chklang/chklang.hrb notrec/notrec.hrb bball/bball.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:haribote/ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote/haribote.sys to:@: \
@@ -54,6 +54,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		copy from:chklang/chklang.hrb to:@: \
 		copy from:notrec/notrec.hrb to:@: \
 		copy from:nihongo/nihongo.fnt to:@: \
+		copy from:bball/bball.hrb to:@: \
 		imgout:haribote.img
 
 # ˆê”Ê‹K‘¥
@@ -104,6 +105,7 @@ full :
 	$(MAKE) -C iroha
 	$(MAKE) -C chklang
 	$(MAKE) -C notrec
+	$(MAKE) -C bball
 	$(MAKE) haribote.img
 
 run_full :
@@ -152,6 +154,7 @@ clean_full :
 	$(MAKE) -C iroha		clean
 	$(MAKE) -C chklang		clean
 	$(MAKE) -C notrec		clean
+	$(MAKE) -C bball		clean
 
 src_only_full :
 	$(MAKE) -C haribote		src_only
@@ -179,6 +182,7 @@ src_only_full :
 	$(MAKE) -C iroha		src_only
 	$(MAKE) -C chklang		src_only
 	$(MAKE) -C notrec		src_only
+	$(MAKE) -C bball		src_only
 	-$(DEL) haribote.img
 
 refresh :
