--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -24,7 +24,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		sosu/sosu.hrb sosu2/sosu2.hrb sosu3/sosu3.hrb \
 		type/type.hrb iroha/iroha.hrb \
 		chklang/chklang.hrb notrec/notrec.hrb bball/bball.hrb \
-		invader/invader.hrb
+		invader/invader.hrb calc/calc.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:haribote/ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote/haribote.sys to:@: \
@@ -57,6 +57,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		copy from:nihongo/nihongo.fnt to:@: \
 		copy from:bball/bball.hrb to:@: \
 		copy from:invader/invader.hrb to:@: \
+		copy from:calc/calc.hrb to:@: \
 		imgout:haribote.img
 
 # ˆê”Ê‹K‘¥
@@ -109,6 +110,7 @@ full :
 	$(MAKE) -C notrec
 	$(MAKE) -C bball
 	$(MAKE) -C invader
+	$(MAKE) -C calc
 	$(MAKE) haribote.img
 
 run_full :
@@ -159,6 +161,7 @@ clean_full :
 	$(MAKE) -C notrec		clean
 	$(MAKE) -C bball		clean
 	$(MAKE) -C invader		clean
+	$(MAKE) -C calc			clean
 
 src_only_full :
 	$(MAKE) -C haribote		src_only
@@ -188,6 +191,7 @@ src_only_full :
 	$(MAKE) -C notrec		src_only
 	$(MAKE) -C bball		src_only
 	$(MAKE) -C invader		src_only
+	$(MAKE) -C calc			src_only
 	-$(DEL) haribote.img
 
 refresh :
