--- a/hariboteMain/Makefile
+++ b/hariboteMain/Makefile
@@ -24,7 +24,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		sosu/sosu.hrb sosu2/sosu2.hrb sosu3/sosu3.hrb \
 		type/type.hrb iroha/iroha.hrb \
 		chklang/chklang.hrb notrec/notrec.hrb bball/bball.hrb \
-		invader/invader.hrb calc/calc.hrb
+		invader/invader.hrb calc/calc.hrb tview/tview.hrb
 	$(EDIMG)   imgin:../z_tools/fdimg0at.tek \
 		wbinimg src:haribote/ipl10.bin len:512 from:0 to:0 \
 		copy from:haribote/haribote.sys to:@: \
@@ -58,6 +58,7 @@ haribote.img : haribote/ipl10.bin haribote/haribote.sys Makefile \
 		copy from:bball/bball.hrb to:@: \
 		copy from:invader/invader.hrb to:@: \
 		copy from:calc/calc.hrb to:@: \
+		copy from:tview/tview.hrb to:@: \
 		imgout:haribote.img
 
 # ˆê”Ê‹K‘¥
@@ -111,6 +112,7 @@ full :
 	$(MAKE) -C bball
 	$(MAKE) -C invader
 	$(MAKE) -C calc
+	$(MAKE) -C tview
 	$(MAKE) haribote.img
 
 run_full :
@@ -162,6 +164,7 @@ clean_full :
 	$(MAKE) -C bball		clean
 	$(MAKE) -C invader		clean
 	$(MAKE) -C calc			clean
+	$(MAKE) -C tview		clean
 
 src_only_full :
 	$(MAKE) -C haribote		src_only
@@ -192,6 +195,7 @@ src_only_full :
 	$(MAKE) -C bball		src_only
 	$(MAKE) -C invader		src_only
 	$(MAKE) -C calc			src_only
+	$(MAKE) -C tview		src_only
 	-$(DEL) haribote.img
 
 refresh :
